# Oberon0-Runtime

./: .pre-commit-config.yaml  CHANGELOG.md  REUSE.toml  pyproject.toml
.github/: changelog-ci-config.yml  cliff.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: conf.py  index.rst
examples/: add.wasm
src/oberon0_runtime/: __init__.py
