[project]
name = "oberon0-runtime"
version = "0.1.2"
description = "Oberon-0 runtime implemented in Python"
keywords = ["oberon", "runtime", "compiler", "interpreter"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "rich>=14.3.3",
    "typer>=0.24.1",
    "wasmtime>=42.0.0",
]

[dependency-groups]
dev = [
    "bump-my-version>=1.2.7",
    "furo>=2025.12.19",
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
    "sphinx>=9.0.4",
    "sphinx-design>=0.7.0",
    "sphinxcontrib-napoleon>=0.7",
    "sphinxcontrib-typer>=0.8.1",
]

[build-system]
requires = ["uv_build>=0.10.1,<0.11.0"]
build-backend = "uv_build"

[tool.pyright]
venvPath = "."
venv = ".venv"

[project.scripts]
oberon0-rt = 'oberon0_runtime:app'

[tool.bumpversion]
current_version = "0.1.2"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "🔖 Bump version: {current_version} -> {new_version}"
allow_dirty = false
commit = true
message = "🔖 Bump version: {current_version} -> {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = ["uv sync", "git add uv.lock"]
post_commit_hooks = []

[[tool.bumpversion.files]]
filename = "docs/conf.py"
search = "release = \"{current_version}\""
replace = "release = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "src/oberon0_runtime/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""
